# fma

./: .clang-format  .gitignore  CMakeLists.txt  build.bash  docker-compose.yml  license.md  license.txt  project.code-workspace  readme.md  test.bash
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  ex_readme.cpp
src/: CMakeLists.txt
src/DMRC/: CMakeLists.txt
src/DMRC/Core/: CMakeLists.txt
src/DMRC/FMA/: CMakeLists.txt  Container.hpp  Core  FPMath.hpp  FPShift.hpp  Simple.hpp  Typedefs
src/DMRC/FMA/Internal/: Comparison.hpp  Container.hpp  ContainerType.hpp  EnableIf.hpp  FPMath.hpp  FPShift.hpp  FPTypeTraits.hpp  Inline.h  Pow.hpp  Simple.hpp  TypeTraits.hpp
src/DMRC/TypeTraits/: CMakeLists.txt  TypeTraits.hpp
tests/: CMakeLists.txt  Test_ContainerType.cpp  Test_FPMath.cpp  Test_FPTypeTraits.cpp  Test_Simple.cpp  Test_Typedefs.cpp
